--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api' // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api' // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
 
+//	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.9'
+
 }
 
 clean {
