--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,15 +12,35 @@ spring:
           time_zone: UTC
         connection:
           release_mode: on_close
-        cache:
-          region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
-          use_second_level_cache: true
+#        cache:
+#          region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+#          use_second_level_cache: true
         dialect:
           storage-engine: innodb
           format_sql: true
         show_sql: true
   datasource:
-    url: ${SPRING_DATASOURCE_BASE_URL:jdbc:mysql://localhost:3306/dev_base?serverTimezone=UTC&useCursors=false&sendStringParametersAsUnicode=false&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false}
-    username: ${SPRING_DATASOURCE_BASE_USERNAME}
-    password: ${SPRING_DATASOURCE_BASE_PASSWORD}
-    driver-class-name: com.mysql.jdbc.Driver
+    url: ${SPRING_DATASOURCE_BASE_URL:jdbc:mysql://druwa-mysql.cgmel9mrx7of.us-east-1.rds.amazonaws.com:3306}/druwa?useCursors=false&sendStringParametersAsUnicode=false&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+    username: ${SPRING_DATASOURCE_BASE_USERNAME:admin}
+    password: ${SPRING_DATASOURCE_BASE_PASSWORD:druwa0070}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
+
+server:
+  port: 5001
+  servlet:
+    context-path: /java
+springdoc:
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  swagger-ui:
+    path: /swagger-ui.html
+    disable-swagger-default-url: true
+    display-query-params-without-oauth2: true
