--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,25 @@
 spring:
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: Asia/Seoul
+        connection:
+          release_mode: on_close
+        dialect:
+          storage-engine: innodb
+  datasource:
+    url: ${SPRING_DATASOURCE_BASE_URL:jdbc:mysql://druwa-mysql.cgmel9mrx7of.us-east-1.rds.amazonaws.com:3306}/druwa?useCursors=false&sendStringParametersAsUnicode=false&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+    username: ${SPRING_DATASOURCE_BASE_USERNAME:admin}
+    password: ${SPRING_DATASOURCE_BASE_PASSWORD:druwa0070}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 server:
   port: 5001
   servlet:
